@@ -171,9 +171,13 @@
 %BEGIN LATEX
 \def\ocwbegincode{}
 \def\ocwendcode{}
+\def\ocwbegindcode{}
+\def\ocwenddcode{}
 %END LATEX
 %HEVEA\newcommand{\ocwbegincode}{}
 %HEVEA\newcommand{\ocwendcode}{}
+%HEVEA\newcommand{\ocwbegindcode}{}
+%HEVEA\newcommand{\ocwenddcode}{}
 
 %HEVEA\newcommand{\endgraf}{}
 
