@@ -3,6 +3,8 @@
 		      LIST OF CHANGES
 		      ===============
 
+  o new macros \ocwbegindcode and \ocwenddcode for code inside documentation
+
 version 1.32, 22/1/2003
 =======================
   o code quotations in titles
